
[project]
name = "scTM"
version = "0.1.0"
description = "single cell topic models"
authors = [
    {name = "chengwei94", email = "chengwei8@gmail.com"},
]
dependencies = [
    "scanpy>=1.9.3",
    "anndata>=0.9.1",
    "gseapy>=1.0.4",
    "pyro-ppl>=1.8.4",
    "torch-geometric>=2.3.1",
    "squidpy>=1.2.2",
    "torch>=2.0.1",
    "torchinfo>=1.8.0",
#    "torch-sparse>=0.6.17",
#    "torch-scatter>=2.1.1"
]
requires-python = ">=3.8"
readme = "README.rst"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
format = [
    "black>=23.3.0",
    "isort>=5.12.0",
]
dev = [
    "pre-commit>=3.3.3",
]
docs = [
    "mkdocs-material>=9.1.14",
    "mkdocs>=1.4.3",
    "mkdocs-jupyter>=0.24.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocstrings[python]>=0.21.2",
    "pymdown-extensions>=10.0.1",
]

[tool.black]  # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
combine_as_imports = true
force_sort_within_sections = true
force_grid_wrap = 2
skip = 'docs'
