
[project]
name = "scTM"
version = "0.1.3"
description = "A toolbox for single cell topic models"
authors = [
    {name = "chengwei94", email = "chengwei8@gmail.com"},
]
dependencies = [
    "scanpy>=1.9.3",
    "anndata>=0.9.1",
    "gseapy>=1.0.4",
    "pyro-ppl>=1.8.4",
    #"torch-geometric>=2.3.1",
    "squidpy>=1.2.2",
    "torch>=2.0.1",
    "torchinfo>=1.8.0",
    #    "torch-sparse>=0.6.17",
    #    "torch-scatter>=2.1.1"
    "discotoolkit>=1.0.0.1",
    "scikit-misc>=0.2.0",
]
requires-python = ">=3.8"
readme = "README.rst"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
format = [
    "black>=23.3.0",
    "isort>=5.12.0",
]
dev = [
    "pre-commit>=3.3.3",
]
docs = [
    "mkdocs-material>=9.1.14",
    "mkdocs>=1.4.3",
    "mkdocs-jupyter>=0.24.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocstrings[python]>=0.21.2",
    "pymdown-extensions>=10.0.1",
]


[tool.ruff]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
src = ["."]
line-length = 88
indent-width = 4
target-version = "py38"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false


[tool.ruff.lint]
# Enable Pyflakes (F) and a subset of the pycodestyle (E)  codes by default.
# pycodestyle warnings (W)
# Activate Security Rules (S) to replace bandit
# Enable the isort rules (I) to replace isort
# flake8-bugbear (B)
# flake8-simplify (SIM)
select = ["F", "E4", "E7", "E9", "W", "S", "I", "B"]
ignore = ["E741", "B006", "B007", "B008", "B026", "S101"]

# Allow auto-fixing of all enabled rules when using the `--fix` option.
fixable = ["ALL"]
unfixable = [] # Specify rules that cannot be auto-fixed, if any.

# Define a regex pattern for allowed unused variables (typically underscore-prefixed).
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
